<resources>
    <string name="app_name">My Application</string>
    <string name="usericon">userIcon</string>
    <string name="leaderBoardButton">排行榜</string>
    <string name="scanButton">掃描</string>
    <string name="achievementButton">成就</string>
    <string name="pictureButton">圖鑑</string>
    <string name="function">功能</string>
    <string name="news">小道消息</string>
    <string name="newsTitle">黃金獵犬</string>
    <string name="newsDetail">位於 : 100台北市中正區八德路一段1號</string>
    <string name="userName">小吉</string>
</resources>