<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1FAEE"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="12dp"
    tools:layout_editor_absoluteY="2dp">

    <Button
        android:id="@+id/button10"
        android:layout_width="165dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="Button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:stateListAnimator="@null"
        android:text="@string/userName"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/news"
        android:contentDescription="@string/usericon"
        android:scaleType="center"
        android:src="@drawable/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/_1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:stateListAnimator="@null"
        android:text="@string/function"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />


    <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leaderBoardButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/leaderBoardButton"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/leaderBoardImg"
        app:layout_constraintTop_toTopOf="@+id/leaderBoardButton" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/scanButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/scanButton"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/scanIcon"
        app:layout_constraintTop_toTopOf="@+id/scanButton" />


    <Button
        android:id="@+id/achievementButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardButton" />

    <TextView
        android:id="@+id/achievementButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/achievementButton"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/achievementIcon"
        app:layout_constraintTop_toTopOf="@+id/achievementButton" />

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="123"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanButton" />

    <TextView
        android:id="@+id/pictureButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/pictureButton"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/pictureIcon"
        app:layout_constraintTop_toTopOf="@+id/pictureButton" />

    <ImageView
        android:id="@+id/leaderBoardImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/leaderBoardButton"
        app:layout_constraintTop_toTopOf="@+id/leaderBoardButton"
        app:srcCompat="@drawable/group_159" />


    <ImageView
        android:id="@+id/scanIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/scanButton"
        app:layout_constraintTop_toTopOf="@+id/scanButton"
        app:srcCompat="@drawable/group_160" />

    <ImageView
        android:id="@+id/achievementIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/achievementButton"
        app:layout_constraintTop_toTopOf="@+id/achievementButton"
        app:srcCompat="@drawable/group_161" />

    <ImageView
        android:id="@+id/pictureIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/pictureButton"
        app:layout_constraintTop_toTopOf="@+id/pictureButton"
        app:srcCompat="@drawable/group_162" />

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/news"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementButton" />

    <ImageView
        android:id="@+id/userLevel"
        android:layout_width="117dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/group_64" />

    <ImageView
        android:id="@+id/settingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="165dp"
        android:layout_height="230dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:stateListAnimator="@null"
        android:text="Button"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageButton
        android:id="@+id/postButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/__1_" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:text="@string/newsTitle"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <TextView
        android:id="@+id/newsDetail"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/newsDetail"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:text="@string/newsTitle"
        app:layout_constraintStart_toStartOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/newsDetail"
        app:layout_constraintStart_toStartOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


</androidx.constraintlayout.widget.ConstraintLayout>